[package]
name = "undone"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.4", features = ["derive"] }
shlex = "1.3.0"
mini-redis = "0.4.1"
async-stream = "0.3.0"
atoi = "2.0.0"
bytes = "1"
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
tracing = "0.1.34"
tracing-subscriber = { version = "0.3.11", features = ["env-filter"] }
rand = "0.8.5"
colored = "2.1.0"
